# charity-ml

./: pyproject.toml
tests/: test_charity_ml.py
