[tool.poetry]
name = "charity-ml"
version = "0.1.0"
description = ""
authors = ["kit <kit@humn.ai>"]

[tool.poetry.dependencies]
python = ">=3.6.1"
numpy = "1.19"
scipy = "1.5"
scikit-learn = "0.17"
pandas = "1.1.1"
matplotlib = "3.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
